--- a/G5MovieFrontend/src/styles.scss
+++ b/G5MovieFrontend/src/styles.scss
@@ -1,1 +1,16 @@
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+
+
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+html, body { height: 100%; }
+body { margin: 0; font-family:'Montserrat', sans-serif;background-color: 	
+    #e9cbcb }
+
+hr { border-top: 1px dashed grey;}
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
