[sourav]update : adminLogin

--- a/G5MovieFrontend/src/app/component/admin-login/admin-login.component.html
+++ b/G5MovieFrontend/src/app/component/admin-login/admin-login.component.html
@@ -10,7 +10,7 @@
         <h6 class="text-center text-dark">Password</h6>
         <input [(ngModel)]="adminLoginData.password" name="password" type="password" id="defaultForm-pass"
           class="form-control validate" /><br />
-        <button type="submit" class="btn btn-info">Login</button>
+        <button type="submit" class="btn btn-success" style="width: 90%;">Login</button>
       </form>
     </div>
   </div>
