--- a/G5MovieFrontend/src/styles.scss
+++ b/G5MovieFrontend/src/styles.scss
@@ -14,3 +14,6 @@ hr { border-top: 1px dashed grey;}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
