[sourav]add: CustomerCurd

--- a/G5MovieFrontend/src/app/component/admin-movies/admin-movies.component.html
+++ b/G5MovieFrontend/src/app/component/admin-movies/admin-movies.component.html
@@ -10,7 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto" style="font-family: 'Montserrat', sans-serif">
           <li class="nav-item">
-            <button class="btn bthHead active">
+            <button class="btn bthHead active" routerLink="/adminMovies">
               Manage Movies
             </button>
           </li>
