--- a/G5MovieFrontend/src/app/component/cart/cart.component.html
+++ b/G5MovieFrontend/src/app/component/cart/cart.component.html
@@ -50,13 +50,11 @@
                                 <strong>Total Price :₹{{ grandTotal }}</strong><br />
                             </td>
                             <td>
-                                <button routerLink="/paymentGateway" class="btn btn-success" id="checkout">
+                                <button routerLink="/payment" class="btn btn-success" id="checkout">
                                     CheckOut
                                 </button>
                             </td>
-
                             <td></td>
-
                         </tr>
                     </tbody>
                 </table>
