--- a/G5MovieFrontend/src/app/component/admin-login/admin-login.component.html
+++ b/G5MovieFrontend/src/app/component/admin-login/admin-login.component.html
@@ -1,13 +1,13 @@
 <div class="adminLogin">
     <div class="shadow-lg p-5 text-success text-center"
       style="background-color: white; border-radius: 10px">
-      <h2 class="alogin">Admin Login</h2>
+      <h1>Admin Login</h1>
       <form (ngSubmit)="adminLogin()">
-        <h5 *ngIf="errorMessage != ''" style="color: red">{{ errorMessage }}</h5>
-        <h6 class="text-center text-lg text-dark ">Email Id</h6>
+        <h3 *ngIf="errorMessage != ''" style="color: red">{{ errorMessage }}</h3>
+        <h2 class="text-center text-lg text-dark ">Email Id</h2>
         <input [(ngModel)]="adminLoginData.emailId" name="email" type="email" id="defaultForm-username"
           class="form-control validate" /><br />
-        <h6 class="text-center text-dark">Password</h6>
+        <h2 class="text-center text-dark">Password</h2>
         <input [(ngModel)]="adminLoginData.password" name="password" type="password" id="defaultForm-pass"
           class="form-control validate" /><br />
         <button type="submit" class="btn btn-success" style="width: 90%;">Login</button>
