--- a/G5MovieFrontend/src/app/component/admin-movies/admin-movies.component.html
+++ b/G5MovieFrontend/src/app/component/admin-movies/admin-movies.component.html
@@ -26,8 +26,8 @@
             </button>
           </li>
           <li class="nav-item">
-            <button class="btn bthHead" routerLink="/managePurchase">
-              Manage Purchases
+            <button class="btn bthHead" routerLink="/viewAllOrder">
+              View Purchases
             </button>
           </li>
           <li class="nav-item">
