--- a/G5MovieFrontend/src/app/component/order-success/order-success.component.html
+++ b/G5MovieFrontend/src/app/component/order-success/order-success.component.html
@@ -1,13 +1,84 @@
-<ng-container >
-    <div class="container" >
-      <div class="center">
-        <img
-          src="../../assets/images/watching-a-movie.png" style="height: 150px; width: 150px;"
-          alt="" />
-        <h3>Movie Ticket Booked Successfully </h3>
-        <button routerLink="/movie" class="btn btn-success" id="to_products_page">
-          Enjoy Your Show
-        </button>
+<div class="container mt-5 mb-5">
+  <div class="row d-flex justify-content-center">
+      <div class="col-md-8">
+          <div class="card">
+            <div class="container" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+              <img src="../../assets/images/watching-a-movie.png" style="height: 150px; width: 150px;" alt="" />
+              <h3>Movie Ticket Booked Successfully</h3>
+          </div>
+          
+              <div class="invoice p-5">
+                  <div class="payment border-top mt-3 mb-3 border-bottom table-responsive">
+                      <table class="table table-borderless">
+                          <tbody>
+                              <tr>
+                                  <td>
+                                      <div class="py-2"> <span class="d-block text-muted">Ticket booked Date</span> <span>{{todayDate|date:'shortDate'}}</span> </div>
+                                  </td>
+                                  <td>
+                                      <div class="py-2"> <span class="d-block text-muted">Payment</span> <span><img src="https://img.icons8.com/color/48/000000/mastercard.png" width="20" /></span> </div>
+                                  </td>
+                                  
+                              </tr>
+                          </tbody>
+                      </table>
+                  </div>
+                  <div class="product border-bottom table-responsive">
+                      <table class="table table-borderless">
+                          <tbody>
+                              <tr *ngFor="let item of cartItems">
+                                  <td width="20%"> <img src="{{item.movie.movieImagePath}}" width="90"> </td>
+                                  <td width="60%"> <span class="font-weight-bold">{{item.movie.movieName}}</span>
+                                      <div class="product-qty"> <span class="d-block">{{item.quantity}}</span> 
+                                      </div>
+                                  </td>
+                                  <td width="20%">
+                                      <div class="text-right"> <span class="font-weight-bold">₹{{item.price}}</span> </div>
+                                  </td>
+                              </tr>
+                          </tbody>
+                      </table>
+                  </div>
+                  <div class="row d-flex justify-content-end">
+                      <div class="col-md-5">
+                          <table class="table table-borderless">
+                              <tbody class="totals">
+                                  <tr>
+                                      <td>
+                                          <div class="text-left"> <span class="text-muted">Subtotal</span> </div>
+                                      </td>
+                                      <td>
+                                          <div class="text-right"> <span>₹{{total}}</span> </div>
+                                      </td>
+                                  </tr>
+                                  <tr>
+                                      <td>
+                                          <div class="text-left"> <span class="text-muted">Special ticket Fee</span> </div>
+                                      </td>
+                                      <td>
+                                          <div class="text-right"> <span>₹60</span> </div>
+                                      </td>
+                                  </tr>
+                                  <tr class="border-top border-bottom">
+                                      <td>
+                                          <div class="text-left"> <span class="font-weight-bold">Total</span> </div>
+                                      </td>
+                                      <td>
+                                          <div class="text-right"> <span class="font-weight-bold">₹{{grandTotal}}</span> </div>
+                                      </td>
+                                  </tr>
+                              </tbody>
+                          </table>
+                      </div>
+                  </div>
+                  <div style="display: flex; flex-direction: column; align-items: center; text-align: center; color: green;">
+                    <p class="font-weight-bold mb-0">Thanks for booking the tickets with us!</p>
+                    <div style="display: flex; justify-content: center;">
+                        <button routerLink="/movie" class="btn btn-success shopMore">Book More</button>
+                    </div>
+                </div>
+                          
+              </div>
+          </div>
       </div>
-    </div>
-  </ng-container>
+  </div>
